--- a/ai-frontend/package.json
+++ b/ai-frontend/package.json
@@ -9,14 +9,19 @@
   },
   "devDependencies": {
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.15.2",
-    "tailwindcss": "^4.1.10"
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "string_decoder": "^1.3.0",
+    "tailwindcss": "^4.1.10",
+    "vm-browserify": "^1.1.2"
   },
-"scripts": {
-  "start": "parcel src/index.html",
-  "build": "parcel build src/index.html"
-}
-
-
-
+  "scripts": {
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
+  }
 }
